--- a/README
+++ b/README
@@ -1,14 +1,42 @@
------------------------------------
-LaTeX templates for lecture notes
+------------------------------------------------- 
+Build lecture slides and notes from common source 
 
-James Keirstead
+James Keirstead 
+9 September 2011
 http://www.jameskeirstead.ca
------------------------------------
+------------------------------------------------- 
 
-DESCRIPTION
+DESCRIPTION 
 
-A series of LaTeX class and style files for creating lecture notes and accompanying slides.
+The LaTeX 'beamer' package provides an excellent way to develop
+lecture notes in a literate programming style, combining both detailed
+background notes as well as presentation slides in a single source
+file.  However users have to manually create wrapper files that will
+build this source into the appropriate format.  
 
-INSTALLATION
+This software provides a set of templates and Python scripts to
+automate the process.  Simply install the tool and type: 
 
-Place the "lectures" directory in your the "tex/latex/" directory of your LaTeX installation and update your Tex database path.  
+> build-lecture source style 
+
+from your working directory and it will automatically generate both
+the slides and notes for the lecture, including any references you
+might have used.
+
+INSTALLATION 
+
+To install the software: 
+
+   1. Unzip the code into a convenient location.  
+
+   2. Update your TeX search path to include the 'latex' directory.  
+
+   3. Install the scripts.
+      a) If on Windows, edit the SCRIPTDIR variable in the
+'build-lecture.bat' file to match your local installation.  Then copy
+the batch file to C:\Windows\System32 or another directory accessible
+from the command line.
+
+      b) If on a *nix system, you should be able to drop the
+build-lecture.py script in the Python directory into a similar
+location, like ~/bin.
