--- a/example/example.tex
+++ b/example/example.tex
@@ -4,10 +4,11 @@
 %% this single document.
 
 %% Header information
-\title{An introduction to widgets}
-%\course[WD 101]{Widgets for Beginners}
+\lecture[1]{An introduction to widgets}{intro-widgets}
+\course[WD 101]{Widgets for Beginners}
 \date{9 September 2011}
 \author{James Keirstead}
+\institute{Imperial College London}
 
 %% Begins the main document
 \begin{document}
@@ -43,8 +44,9 @@ Second column text \citep{Body2000}
 \end{frame}
 
 %% Optional slide for references
+\section{Further reading}
 If you would like to read more about widgets, please try these references.
-\begin{frame}[allowframebreaks]{References}
+\begin{frame}[allowframebreaks]%{References}
 \bibliographystyle{plainnat}
 \bibliography{refs}
 \end{frame}
