--- a/example/example.tex
+++ b/example/example.tex
@@ -7,8 +7,9 @@
 \lecture[1]{An introduction to widgets}{intro-widgets}
 \course[WD 101]{Widgets for Beginners}
 \date{9 September 2011}
-\author{James Keirstead}
-\institute{Imperial College London}
+\author{Prof.\ J.\ Bloggs}
+\email{j.bloggs@university.ac.uk}
+\institute{Big University}
 
 %% Begins the main document
 \begin{document}
@@ -43,10 +44,17 @@ Second column text \citep{Body2000}
 \end{columns}
 \end{frame}
 
+% Some code
+\begin{frame}[fragile]{Sample R code}
+\begin{rcode}
+x <- 1
+\end{rcode}
+\end{frame}
+
 %% Optional slide for references
 \section{Further reading}
 If you would like to read more about widgets, please try these references.
-\begin{frame}[allowframebreaks]%{References}
+\begin{frame}[allowframebreaks]{References}
 \bibliographystyle{plainnat}
 \bibliography{refs}
 \end{frame}
