--- a/example/style.tex
+++ b/example/style.tex
@@ -4,13 +4,11 @@
 \setmonofont{Lucida Console}
 
 % Define colours
-\definecolor{ImperialBlue}{rgb}{0.082,0.416,0.608}
-\definecolor{ImperialLightBlue}{rgb}{0.545,0.682,0.8}
-\definecolor{UESGreen}{rgb}{0.133,0.694,0.298}
-\definecolor{ImperialBrown}{rgb}{0.612,0.278,0.086}
-\hypersetup{colorlinks=true,
-  linkcolor=ImperialBlue,
-  citecolor=ImperialBrown,urlcolor=black!50}
+%\definecolor{ImperialBlue}{rgb}{0.082,0.416,0.608}
+%\definecolor{ImperialLightBlue}{rgb}{0.545,0.682,0.8}
+%\definecolor{UESGreen}{rgb}{0.133,0.694,0.298}
+%\definecolor{ImperialBrown}{rgb}{0.612,0.278,0.086}
+
 
 % Change the date style
 \RequirePackage{datetime}
@@ -18,4 +16,4 @@
 \UKdate
 
 % Change the logo
-%\setlogo{}
+\setlogo{logo}
