Added subtitle support, and fixed slide labels.

--- a/example/example.tex
+++ b/example/example.tex
@@ -5,9 +5,10 @@
 
 %% Header information
 \lecture[1]{An introduction to widgets}{intro-widgets}
+\subtitle{Optional subtitle}
 \course[WD 101]{Widgets for Beginners}
 \date{9 September 2011}
-\author{Prof.\ J.\ Bloggs}
+\author[Bloggs]{Prof.\ J.\ Bloggs}
 \email{j.bloggs@university.ac.uk}
 \institute{Big University}
 
@@ -52,8 +53,9 @@ x <- 1
 \end{frame}
 
 %% Optional slide for references
-\section{Further reading}
+\section{References}
 If you would like to read more about widgets, please try these references.
+
 \begin{frame}[allowframebreaks]{References}
 \bibliographystyle{plainnat}
 \bibliography{refs}
