Final tidying of source files.

--- a/README
+++ b/README
@@ -10,11 +10,11 @@ DESCRIPTION
 
 The LaTeX 'beamer' package provides an excellent way to develop
 lecture notes in a literate programming style, combining both detailed
-background notes as well as presentation slides in a single source
-file.  However users have to manually create wrapper files that will
+background notes and presentation slides in a single source file.  
+However users have to manually create wrapper files that will
 build this source into the appropriate format.  
 
-This software provides a set of templates and Python scripts to
+This software provides a set of templates and a Python script to
 automate the process.  Simply install the tool and type: 
 
 > build-lecture source style 
@@ -30,8 +30,11 @@ To install the software:
    1. Unzip the code into a convenient location.  
 
    2. Update your TeX search path to include the 'latex' directory. 
-      a) If on Windows with MikTeX, go into Settings and click
-      the update file database button.
+
+      a) If on Windows with MikTeX, use the Settings program and select
+      the Roots tab.  Add the project's latex directory. Then select 
+      the General tab and click the "Refresh FNDB" button.  This will 
+      add the files to MiKTeX's file name database.
       
       b) If on a *nix system, type:
 
@@ -45,23 +48,25 @@ To install the software:
 TEXINPUTS=.:~/software/texmf//:/usr/share/texmf-texlive//:/usr/share/texmf//:
 export TEXINPUTS
 
-	This is on Ubuntu 10.04.
+	For completeness, this is on Ubuntu 10.04 system.
 
    3. Install the scripts.
+
       a) If on Windows, edit the SCRIPTDIR variable in the
-'build-lecture.bat' file to match your local installation.  Then copy
-the batch file to C:\Windows\System32 or another directory accessible
-from the command line.
+      'build-lecture.bat' file to match your local installation.  Then copy
+      the batch file to C:\Windows\System32 or another directory accessible
+      from the command line.
 
       b) If on a *nix system, you should be able to drop the
-build-lecture.py script in the Python directory into a similar
-location, like ~/bin.  You may need to add this directory to your
-$PATH variable and also change the permissions on the file, e.g.
+      build-lecture.py script from the python directory into a similar
+      location, like ~/bin.  You may need to add this directory to your
+      $PATH variable and also change the permissions on the file, e.g.
 
 	> chmod 766 build-lecture.py
 
     4. If you are using a version control system, please install the vc
-latex package and change the following lines:
+       latex package and change the following lines.
+
       - In lectures.sty, uncomment "\input{vc}"
       - In build-lectures.py, change useVC to True
 
