--- a/example/example.tex
+++ b/example/example.tex
@@ -46,6 +46,8 @@ Second column text \citep{Body2000}
 \end{frame}
 
 % Some code
+% More code environments can be defined above
+% using the listings package.
 \begin{frame}[fragile]{Sample R code}
 \begin{rcode}
 x <- 1
