--- a/python/notes-header.tex
+++ b/python/notes-header.tex
@@ -1,4 +1,6 @@
-% Copyright 2009 by James Keirstead
+% Lectures notes header
+% James Keirstead
+% Copyright 2011
 
 \documentclass[a4paper]{article}
 
