--- a/python/slides-header.tex
+++ b/python/slides-header.tex
@@ -1,4 +1,6 @@
-% Copyright 2009 by James Keirstead
+% Lectures slides header
+% James Keirstead
+% Copyright 2011
 
 \documentclass[ignorenonframetext]{beamer}
 
