--- a/example/style.tex
+++ b/example/style.tex
@@ -1,17 +1,18 @@
+% Stylesheet for lectures
+
 % Override default fonts
 \setmainfont{Minion Pro}
 \setsansfont{Myriad Pro}
 \setmonofont{Lucida Console}
 
-% Define colours
-%\definecolor{ImperialBlue}{rgb}{0.082,0.416,0.608}
-%\definecolor{ImperialLightBlue}{rgb}{0.545,0.682,0.8}
-%\definecolor{UESGreen}{rgb}{0.133,0.694,0.298}
-%\definecolor{ImperialBrown}{rgb}{0.612,0.278,0.086}
-
+% Define colours.  
+% The default definitions are provided below.
+%\definecolor{headings}{rgb}{0.082,0.416,0.608}
+%\definecolor{links}{rgb}{0.612,0.278,0.086}
+%\definecolor{codebg}{rgb}{0.3,0.3,0.3}
 
 % Change the date style
-\RequirePackage{datetime}
+\usepackage{datetime}
 \newdateformat{UKdate}{\THEDAY\ \themonthname[\THEMONTH]\ \THEYEAR}
 \UKdate
 
