Added booktabs for table formatting

--- a/latex/tex/latex/lectures/lectures.sty
+++ b/latex/tex/latex/lectures/lectures.sty
@@ -35,6 +35,9 @@
 % Allow hyperlinks
 \RequirePackage{hyperref}
 
+% For table formatting
+\RequirePackage{booktabs}
+
 % Allow referencing
 \RequirePackage{natbib}
 
