Small formatting change on header of notes

--- a/latex/tex/latex/lectures/lectures.sty
+++ b/latex/tex/latex/lectures/lectures.sty
@@ -322,7 +322,7 @@
    \pagestyle{fancy}%
    \fancyhead{}%
    \fancyfoot{}%
-   \lhead{{\mycoursenum\ -- \mycourse}}%
+   \lhead{{\mycoursenum\ \mycourse}}%
    \rhead{{\thepage}}%
    \renewcommand{\headrulewidth}{0pt}
    %% git revision control footer 
