Added preferred bibliography punctuation to the style file

--- a/latex/tex/latex/lectures/lectures.sty
+++ b/latex/tex/latex/lectures/lectures.sty
@@ -40,6 +40,8 @@
 
 % Allow referencing
 \RequirePackage{natbib}
+% Bibliography formatting commands
+\bibpunct[: ]{(}{)}{,}{a}{}{,}
 
 % For fancy code listings
 \RequirePackage{listings}
